# tda

./: .gitignore  CMakeLists.txt
codigos/codigos_bt/: CD.cpp  CD_con_solucion.cpp  CD_input  CD_podas.cpp  sudoku.cpp  sudoku_full_podas.cpp  sudoku_grande_input  sudoku_helper.c  sudoku_input  sudoku_podas_medio.cpp
codigos/codigos_dinamica/: matrix_chain.cpp  pawn.cpp
practicas/: CMakeLists.txt
practicas/practica1/: bt_magicuadrado.cpp  bt_rutaminima.cpp  bt_sumasubconjuntos.cpp  gr_sumagolosa.cpp  gr_sumaselectiva.cpp  in_maxisubconjunto.txt  maxisubconjunto.cpp  pd_astrotrade.cpp  pd_corteseconomicos.cpp  pd_cubrircosto.cpp  pd_travesiavital.cpp  practica1.cpp
practicas/practica2/: dq_cazadorfalses.cpp  dq_desordensort.cpp  dq_distanciamax.cpp  dq_indiceespejo.cpp  dq_masizquierda.cpp  dq_potencialog.cpp  in_distanciamax.txt
practicas/practica4/: agm_anchobanda.cpp  agm_kn.cpp  aristaspuente.cpp  in_aristaspuente.txt
tda_tp1/: aggrcow.cpp  borw.cpp  busyman.cpp
tda_tp2/: .gitignore  CMakeLists.txt  aristas.cpp  bipartitud.cpp  puentes.cpp  tuneles.cpp
tda_tp3/: .gitignore  CMakeLists.txt  aulas.cpp  seguridad.cpp
